Fondo degradado y foto en el unsername del menu

--- a/index.html
+++ b/index.html
@@ -13,8 +13,16 @@
     		<img src="static/img/logo.png" alt="mozArt" height="auto" width="150px">
 		</figure>
 		<div class="OptionMenu" id="menu-slide">
+			<h1 class="OptionMenu-title">Menu</h1>
 			<ul class="OptionMenu-list">
-				<li class="OptionMenu-option">MauricioDinki</li>
+				<li class="OptionMenu-option">
+					<a class="OptionMenu-link" href="#">
+						<figure class="OptionMenu-avatar">
+		                    <img src="static/img/avatar1.jpg" width="50" height="50">
+		                </figure>
+		                <span class="OptionMenu-username">MauricioDinki</span>
+	               </a>
+				</li>
 				<li class="OptionMenu-option">Subir Obra</li>
 				<li class="OptionMenu-option">Configuración</li>
 				<li class="OptionMenu-option">Cerrar Sesión</li>
