Añadida barra de navegación

--- a/index.html
+++ b/index.html
@@ -23,13 +23,73 @@
 		                <span class="OptionMenu-username">MauricioDinki</span>
 	               </a>
 				</li>
-				<li class="OptionMenu-option">Subir Obra</li>
-				<li class="OptionMenu-option">Configuración</li>
-				<li class="OptionMenu-option">Cerrar Sesión</li>
+				<li class="OptionMenu-option text-center"><a class="OptionMenu-link" href=""> Subir Obra</a></li>
+				<li class="OptionMenu-option text-center"> <a class="OptionMenu-link" href="">Configuración</a></li>
+				<li class="OptionMenu-option text-center"> <a class="OptionMenu-link" href="">Cerrar Sesión</a></li>
 			</ul>
 		</div>
 		<div class="Header-button menu-icon" id="button-action"></div>
 	</header>
+	 <nav class="Navbar">
+        <ul class="Navbar-list">
+            <li class="Navbar-option">
+            	<a href="#" class="Navbar-link todo-icon"></a>
+            </li>
+            <li class="Navbar-option">
+            	<a href="#" class="Navbar-link dibujo-pintura-icon"></a>
+            </li>
+            <li class="Navbar-option">
+            	<a href="#" class="Navbar-link fotografia-filme-icon"></a>
+            </li>
+            <li class="Navbar-option">
+            	<a href="#" class="Navbar-link teatro-literatura-icon"></a>
+            </li>
+            <li class="Navbar-option">
+            	<a href="#" class="Navbar-link musica-baile-icon"></a>
+            </li>
+            <li class="Navbar-option">
+            	<a href="#" class="Navbar-link escultura-ceramica-icon"></a>
+            </li>
+            <li class="Navbar-option">
+            	<a href="#" class="Navbar-link arte_digital-icon"></a>
+            </li>
+            <li class="Navbar-option">
+            	<a href="#" class="Navbar-link otros-icon"></a>
+            </li>
+        </ul>
+    </nav>
+    <section class="Work-container">
+    	<h2>hola</h2>
+    	<h2>hola</h2>
+    	<h2>hola</h2>
+    	<h2>hola</h2>
+    	<h2>hola</h2>
+    	<h2>hola</h2>
+    	<h2>hola</h2>
+    	<h2>hola</h2>
+    	<h2>hola</h2>
+    	<h2>hola</h2>
+    	<h2>hola</h2>
+    	<h2>hola</h2>
+    	<h2>hola</h2>
+    	<h2>hola</h2>
+    	<h2>hola</h2>
+    	<h2>hola</h2>
+    	<h2>hola</h2>
+    	<h2>hola</h2>
+    	<h2>hola</h2>
+    	<h2>hola</h2>
+    	<h2>hola</h2>
+    	<h2>hola</h2>
+    	<h2>hola</h2>
+    	<h2>hola</h2>
+    	<h2>hola</h2>
+    	<h2>hola</h2>
+    	<h2>hola</h2>
+    	<h2>hola</h2>
+    	<h2>hola</h2>
+    	<h2>hola</h2>
+    </section> 
 </body>
 
 <script src="static/js/vendor/hammer.min.map"></script>
