Arreglado bug del z-index con el navbar y el menu desplegable

--- a/index.html
+++ b/index.html
@@ -59,6 +59,31 @@
         </ul>
     </nav>
     <section class="Work-container">
+		<article class="Work-item">
+		    <figure class="Work-image">
+		            <a href="#">
+		                <img src="static/img/obra1.jpg" width="300" height="173">
+		            </a>
+		    </figure>
+		    <div class="Work-data">
+		        <figure class="Work-avatar">
+		                <a href="#"> 
+		                    <img src="static/img/avatar1.jpg" width="50" height="50">
+		                </a>
+		        </figure>
+		        <div class="Work-info">
+		            <h2 class="Work-title"> 
+		                <a class='fotografia-filme' href="#"> El Auto Increible</a>
+		            </h2>
+		            <p class="Work-author">
+		                <a href="#">Mauricio</a>
+		            </p>
+		            <p class="Work-date">
+		                18/10/2014
+		            </p>
+		        </div>
+		    </div>
+		</article>
     	<h2>hola</h2>
     	<h2>hola</h2>
     	<h2>hola</h2>
