Añadidos thumbnails de las obras

--- a/index.html
+++ b/index.html
@@ -59,62 +59,207 @@
         </ul>
     </nav>
     <section class="Work-container">
-		<article class="Work-item">
-		    <figure class="Work-image">
-		            <a href="#">
-		                <img src="static/img/obra1.jpg" width="300" height="173">
-		            </a>
-		    </figure>
-		    <div class="Work-data">
-		        <figure class="Work-avatar">
-		                <a href="#"> 
-		                    <img src="static/img/avatar1.jpg" width="50" height="50">
-		                </a>
-		        </figure>
-		        <div class="Work-info">
-		            <h2 class="Work-title"> 
-		                <a class='fotografia-filme' href="#"> El Auto Increible</a>
-		            </h2>
-		            <p class="Work-author">
-		                <a href="#">Mauricio</a>
-		            </p>
-		            <p class="Work-date">
-		                18/10/2014
-		            </p>
-		        </div>
-		    </div>
-		</article>
-    	<h2>hola</h2>
-    	<h2>hola</h2>
-    	<h2>hola</h2>
-    	<h2>hola</h2>
-    	<h2>hola</h2>
-    	<h2>hola</h2>
-    	<h2>hola</h2>
-    	<h2>hola</h2>
-    	<h2>hola</h2>
-    	<h2>hola</h2>
-    	<h2>hola</h2>
-    	<h2>hola</h2>
-    	<h2>hola</h2>
-    	<h2>hola</h2>
-    	<h2>hola</h2>
-    	<h2>hola</h2>
-    	<h2>hola</h2>
-    	<h2>hola</h2>
-    	<h2>hola</h2>
-    	<h2>hola</h2>
-    	<h2>hola</h2>
-    	<h2>hola</h2>
-    	<h2>hola</h2>
-    	<h2>hola</h2>
-    	<h2>hola</h2>
-    	<h2>hola</h2>
-    	<h2>hola</h2>
-    	<h2>hola</h2>
-    	<h2>hola</h2>
-    	<h2>hola</h2>
-    </section> 
+        <article class="Work-item">
+            <figure class="Work-image">
+                <a href="#">
+                    <img src="static/img/obra1.jpg" width="300" height="173">
+                </a>
+            </figure>
+            <div class="Work-Data">
+                <figure class="Work-Avatar">
+                    <a href="#"> 
+                        <img src="static/img/avatar1.jpg" width="50" height="50">
+                    </a>
+                </figure>
+                <div class="Work-info">
+                    <h2 class="Work-title"> 
+                        <a class='fotografia-filme' href="#"> El Auto Increible</a>
+                    </h2>
+                    <p class="Work-author">
+                        <a href="#">Mauricio</a>
+                    </p>
+                    <p class="Work-date">
+                        18/10/2014
+                    </p>
+                </div>
+            </div>
+        </article>
+        <article class="Work-item">
+            <figure class="Work-image">
+                <a href="#">
+                    <img src="static/img/obra2.jpg" width="300" height="173">
+                </a>
+            </figure>
+            <div class="Work-Data">
+                <figure class="Work-Avatar">
+                    <a href="#"> 
+                        <img src="static/img/avatar2.jpg" width="50" height="50">
+                    </a>
+                </figure>
+                <div class="Work-info">
+                    <h2 class="Work-title"> 
+                        <a class='fotografia-filme' href="#"> Cielo Hermoso</a>
+                    </h2>
+                    <p class="Work-author">
+                        <a class="Author-link" href="#">Juan</a>
+                    </p>
+                    <p class="Work-date">
+                        18/10/2014
+                    </p>
+                </div>
+            </div>
+        </article>
+        <article class="Work-item">
+            <figure class="Work-image">
+                <a href="#">
+                    <img src="static/img/obra3.jpg" width="300" height="173">
+                </a>
+            </figure>
+            <div class="Work-Data">
+                <figure class="Work-Avatar">
+                    <a href="#"> 
+                        <img src="static/img/avatar3.jpg" width="50" height="50">
+                    </a>
+                </figure>
+                <div class="Work-info">
+                    <h2 class="Work-title"> 
+                        <a class='fotografia-filme' href="#"> Dubai</a>
+                    </h2>
+                    <p class="Work-author">
+                        <a class="Author-link" href="#">Miguel</a>
+                    </p>
+                    <p class="Work-date">
+                        18/10/2014
+                    </p>
+                </div>
+            </div>
+        </article>
+        <article class="Work-item">
+            <figure class="Work-image">
+                <a href="#">
+                    <img src="static/img/obra4.jpg" width="300" height="173">
+                </a>
+            </figure>
+            <div class="Work-Data">
+                <figure class="Work-Avatar">
+                    <a href="#"> 
+                        <img src="static/img/avatar4.jpg" width="50" height="50">
+                    </a>
+                </figure>
+                <div class="Work-info">
+                    <h2 class="Work-title"> 
+                        <a class='fotografia-filme' href="#"> Edificios</a>
+                    </h2>
+                    <p class="Work-author">
+                        <a class="Author-link" href="#">El Mike</a>
+                    </p>
+                    <p class="Work-date">
+                        18/10/2014
+                    </p>
+                </div>
+            </div>
+        </article>
+        <article class="Work-item">
+            <figure class="Work-image">
+                <a href="#">
+                    <img src="static/img/obra5.jpg" width="300" height="173">
+                </a>
+            </figure>
+            <div class="Work-Data">
+                <figure class="Work-Avatar">
+                    <a href="#"> 
+                        <img src="static/img/avatar5.jpg" width="50" height="50">
+                    </a>
+                </figure>
+                <div class="Work-info">
+                    <h2 class="Work-title"> 
+                        <a class='fotografia-filme' href="#"> Arriesgado</a>
+                    </h2>
+                    <p class="Work-author">
+                        <a class="Author-link" href="#">Zartman</a>
+                    </p>
+                    <p class="Work-date">
+                        18/10/2014
+                    </p>
+                </div>
+            </div>
+        </article>
+        <article class="Work-item">
+            <figure class="Work-image">
+                <a href="#">
+                    <img src="static/img/obra6.jpg" width="300" height="173">
+                </a>
+            </figure>
+            <div class="Work-Data">
+                <figure class="Work-Avatar">
+                    <a href="#"> 
+                        <img src="static/img/avatar6.jpg" width="50" height="50">
+                    </a>
+                </figure>
+                <div class="Work-info">
+                    <h2 class="Work-title"> 
+                        <a class='fotografia-filme' href="#" > Paisaje</a>
+                    </h2>
+                    <p class="Work-author">
+                        <a class="Author-link" href="#">Locolml</a>
+                    </p>
+                    <p class="Work-date">
+                        18/10/2014
+                    </p>
+                </div>
+            </div>
+        </article>
+        <article class="Work-item">
+            <figure class="Work-image">
+                <a href="#">
+                    <img src="static/img/obra7.jpg" width="300" height="173">
+                </a>
+            </figure>
+            <div class="Work-Data">
+                <figure class="Work-Avatar">
+                    <a href="#"> 
+                        <img src="static/img/avatar7.jpg" width="50" height="50">
+                    </a>
+                </figure>
+                <div class="Work-info">
+                    <h2 class="Work-title"> 
+                        <a class='fotografia-filme' href="#"> Pinguinos</a>
+                    </h2>
+                    <p class="Work-author">
+                        <a class="Author-link" href="#">Kawaiman</a>
+                    </p>
+                    <p class="Work-date">
+                        18/10/2014
+                    </p>
+                </div>
+            </div>
+        </article>
+        <article class="Work-item">
+            <figure class="Work-image">
+                <a href="#">
+                    <img src="static/img/obra8.jpg" width="300" height="173">
+                </a>
+            </figure>
+            <div class="Work-Data">
+                <figure class="Work-Avatar">
+                    <a href="#"> 
+                        <img src="static/img/avatar8.jpg" width="50" height="50">
+                    </a>
+                </figure>
+                <div class="Work-info">
+                    <h2 class="Work-title"> 
+                        <a class='fotografia-filme' href="#"> Tiburon</a>
+                    </h2>
+                    <p class="Work-author">
+                        <a class="Author-link" href="#">Zulito</a>
+                    </p>
+                    <p class="Work-date">
+                        18/10/2014
+                    </p>
+                </div>
+            </div>
+        </article>
+    </section>
 </body>
 
 <script src="static/js/vendor/hammer.min.map"></script>
