Arregaldo bug del menu lateral al hacer scroll cuando esta activo

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </figure>
                 <div class="Work-info">
                     <h2 class="Work-title"> 
-                        <a class='fotografia-filme' href="#"> El Auto Increible</a>
+                        <a class='fotografia-filme-icon' href="#"> El Auto Increible</a>
                     </h2>
                     <p class="Work-author">
                         <a href="#">Mauricio</a>
@@ -98,7 +98,7 @@
                 </figure>
                 <div class="Work-info">
                     <h2 class="Work-title"> 
-                        <a class='fotografia-filme' href="#"> Cielo Hermoso</a>
+                        <a class='fotografia-filme-icon' href="#"> Cielo Hermoso</a>
                     </h2>
                     <p class="Work-author">
                         <a class="Author-link" href="#">Juan</a>
@@ -123,7 +123,7 @@
                 </figure>
                 <div class="Work-info">
                     <h2 class="Work-title"> 
-                        <a class='fotografia-filme' href="#"> Dubai</a>
+                        <a class='fotografia-filme-icon' href="#"> Dubai</a>
                     </h2>
                     <p class="Work-author">
                         <a class="Author-link" href="#">Miguel</a>
@@ -148,7 +148,7 @@
                 </figure>
                 <div class="Work-info">
                     <h2 class="Work-title"> 
-                        <a class='fotografia-filme' href="#"> Edificios</a>
+                        <a class='fotografia-filme-icon' href="#"> Edificios</a>
                     </h2>
                     <p class="Work-author">
                         <a class="Author-link" href="#">El Mike</a>
@@ -173,7 +173,7 @@
                 </figure>
                 <div class="Work-info">
                     <h2 class="Work-title"> 
-                        <a class='fotografia-filme' href="#"> Arriesgado</a>
+                        <a class='fotografia-filme-icon' href="#"> Arriesgado</a>
                     </h2>
                     <p class="Work-author">
                         <a class="Author-link" href="#">Zartman</a>
@@ -198,7 +198,7 @@
                 </figure>
                 <div class="Work-info">
                     <h2 class="Work-title"> 
-                        <a class='fotografia-filme' href="#" > Paisaje</a>
+                        <a class='fotografia-filme-icon' href="#" > Paisaje</a>
                     </h2>
                     <p class="Work-author">
                         <a class="Author-link" href="#">Locolml</a>
@@ -223,7 +223,7 @@
                 </figure>
                 <div class="Work-info">
                     <h2 class="Work-title"> 
-                        <a class='fotografia-filme' href="#"> Pinguinos</a>
+                        <a class='fotografia-filme-icon' href="#"> Pinguinos</a>
                     </h2>
                     <p class="Work-author">
                         <a class="Author-link" href="#">Kawaiman</a>
@@ -248,7 +248,7 @@
                 </figure>
                 <div class="Work-info">
                     <h2 class="Work-title"> 
-                        <a class='fotografia-filme' href="#"> Tiburon</a>
+                        <a class='fotografia-filme-icon' href="#"> Tiburon</a>
                     </h2>
                     <p class="Work-author">
                         <a class="Author-link" href="#">Zulito</a>
