--- a/index.html
+++ b/index.html
@@ -13,24 +13,15 @@
     		<img src="static/img/logo.png" alt="mozArt" height="auto" width="150px">
 		</figure>
 		<div class="OptionMenu" id="menu-slide">
-			<h1 class="OptionMenu-title">Menu</h1>
 			<ul class="OptionMenu-list">
-				<li class="OptionMenu-option">
-					<a class="OptionMenu-link" href="#">
-						<figure class="OptionMenu-avatar">
-		                    <img src="static/img/avatar1.jpg" width="50" height="50">
-		                </figure>
-		                <span class="OptionMenu-username">MauricioDinki</span>
-	               </a>
-				</li>
-				<li class="OptionMenu-option text-center"><a class="OptionMenu-link" href=""> Subir Obra</a></li>
-				<li class="OptionMenu-option text-center"> <a class="OptionMenu-link" href="">Configuración</a></li>
-				<li class="OptionMenu-option text-center"> <a class="OptionMenu-link" href="">Cerrar Sesión</a></li>
+				<li class="OptionMenu-option"><a class="OptionMenu-link" href=""> Subir Obra</a></li>
+				<li class="OptionMenu-option"> <a class="OptionMenu-link" href="">Configuración</a></li>
+				<li class="OptionMenu-option"> <a class="OptionMenu-link" href="">Cerrar Sesión</a></li>
 			</ul>
 		</div>
 		<div class="Header-button menu-icon" id="button-action"></div>
 	</header>
-	 <nav class="Navbar">
+	 <!--<nav class="Navbar">
         <ul class="Navbar-list">
             <li class="Navbar-option">
             	<a href="#" class="Navbar-link todo-icon"></a>
@@ -259,7 +250,7 @@
                 </div>
             </div>
         </article>
-    </section>
+    </section> -->
 </body>
 
 <script src="static/js/vendor/hammer.min.map"></script>
