--- a/index.html
+++ b/index.html
@@ -14,14 +14,23 @@
 		</figure>
 		<div class="OptionMenu" id="menu-slide">
 			<ul class="OptionMenu-list">
-				<li class="OptionMenu-option"><a class="OptionMenu-link" href=""> Subir Obra</a></li>
-				<li class="OptionMenu-option"> <a class="OptionMenu-link" href="">Configuración</a></li>
-				<li class="OptionMenu-option"> <a class="OptionMenu-link" href="">Cerrar Sesión</a></li>
+                <li class="OptionMenu-option">
+                    <a class="OptionMenu-link" href="">PERFIL</a>
+                </li>
+				<li class="OptionMenu-option">
+                    <a class="OptionMenu-link" href="">+OBRAS</a>
+                </li>
+				<li class="OptionMenu-option"> 
+                    <a class="OptionMenu-link" href="">CONFIGURACION</a>
+                </li>
+				<li class="OptionMenu-option">
+                    <a class="OptionMenu-link" href="">CERRAR SESION</a>
+                </li>
 			</ul>
 		</div>
 		<div class="Header-button menu-icon" id="button-action"></div>
 	</header>
-	 <!--<nav class="Navbar">
+	<nav class="Navbar">
         <ul class="Navbar-list">
             <li class="Navbar-option">
             	<a href="#" class="Navbar-link todo-icon"></a>
@@ -250,9 +259,10 @@
                 </div>
             </div>
         </article>
-    </section> -->
+    </section>
 </body>
 
-<script src="static/js/vendor/hammer.min.map"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+<!-- <script src="static/js/vendor/hammer.min.map"></script> -->
 <script src="static/js/main.js"></script>
 </html>
