menu responsive en desktop

--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
 		<div class="OptionMenu" id="menu-slide">
 			<ul class="OptionMenu-list">
                 <li class="OptionMenu-option">
-                    <a class="OptionMenu-link" href="">PERFIL</a>
+                    <a class="OptionMenu-link" href="">Perfil</a>
                 </li>
 				<li class="OptionMenu-option">
-                    <a class="OptionMenu-link" href="">+OBRAS</a>
+                    <a class="OptionMenu-link" href="">+Obras</a>
                 </li>
 				<li class="OptionMenu-option"> 
-                    <a class="OptionMenu-link" href="">CONFIGURACION</a>
+                    <a class="OptionMenu-link" href="">Configuración</a>
                 </li>
 				<li class="OptionMenu-option">
-                    <a class="OptionMenu-link" href="">CERRAR SESION</a>
+                    <a class="OptionMenu-link" href="">Cerrar Sesión</a>
                 </li>
 			</ul>
 		</div>
