--- a/index.html
+++ b/index.html
@@ -1,266 +1,12 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
-	<title>Explorar - mozArt</title>
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" type="text/css" href="static/css/main.css">
-	<link rel="icon" type="image/png" href="static/img/favicon.png"/>
+    <meta charset="UTF-8">
+    <title>Diseño Mozart</title>
 </head>
 <body>
-	<header class="Header">
-		<figure class="Header-logo">
-    		<img src="static/img/logo.png" alt="mozArt" height="auto" width="150px">
-		</figure>
-		<div class="OptionMenu" id="menu-slide">
-			<ul class="OptionMenu-list">
-                <li class="OptionMenu-option">
-                    <a class="OptionMenu-link" href="">Perfil</a>
-                </li>
-				<li class="OptionMenu-option">
-                    <a class="OptionMenu-link" href="">+Obras</a>
-                </li>
-				<li class="OptionMenu-option"> 
-                    <a class="OptionMenu-link" href="">Configuración</a>
-                </li>
-				<li class="OptionMenu-option">
-                    <a class="OptionMenu-link" href="">Cerrar Sesión</a>
-                </li>
-			</ul>
-		</div>
-		<div class="Header-button menu-icon" id="button-action"></div>
-	</header>
-	<nav class="Navbar">
-        <ul class="Navbar-list">
-            <li class="Navbar-option">
-            	<a href="#" class="Navbar-link todo-icon"></a>
-            </li>
-            <li class="Navbar-option">
-            	<a href="#" class="Navbar-link dibujo-pintura-icon"></a>
-            </li>
-            <li class="Navbar-option">
-            	<a href="#" class="Navbar-link fotografia-filme-icon"></a>
-            </li>
-            <li class="Navbar-option">
-            	<a href="#" class="Navbar-link teatro-literatura-icon"></a>
-            </li>
-            <li class="Navbar-option">
-            	<a href="#" class="Navbar-link musica-baile-icon"></a>
-            </li>
-            <li class="Navbar-option">
-            	<a href="#" class="Navbar-link escultura-ceramica-icon"></a>
-            </li>
-            <li class="Navbar-option">
-            	<a href="#" class="Navbar-link arte_digital-icon"></a>
-            </li>
-            <li class="Navbar-option">
-            	<a href="#" class="Navbar-link otros-icon"></a>
-            </li>
-        </ul>
-    </nav>
-    <section class="Work-container">
-        <article class="Work-item">
-            <figure class="Work-image">
-                <a href="#">
-                    <img src="static/img/obra1.jpg" width="300" height="173">
-                </a>
-            </figure>
-            <div class="Work-Data">
-                <figure class="Work-Avatar">
-                    <a href="#"> 
-                        <img src="static/img/avatar1.jpg" width="50" height="50">
-                    </a>
-                </figure>
-                <div class="Work-info">
-                    <h2 class="Work-title"> 
-                        <a class='fotografia-filme-icon' href="#"> El Auto Increible</a>
-                    </h2>
-                    <p class="Work-author">
-                        <a href="#">Mauricio</a>
-                    </p>
-                    <p class="Work-date">
-                        18/10/2014
-                    </p>
-                </div>
-            </div>
-        </article>
-        <article class="Work-item">
-            <figure class="Work-image">
-                <a href="#">
-                    <img src="static/img/obra2.jpg" width="300" height="173">
-                </a>
-            </figure>
-            <div class="Work-Data">
-                <figure class="Work-Avatar">
-                    <a href="#"> 
-                        <img src="static/img/avatar2.jpg" width="50" height="50">
-                    </a>
-                </figure>
-                <div class="Work-info">
-                    <h2 class="Work-title"> 
-                        <a class='fotografia-filme-icon' href="#"> Cielo Hermoso</a>
-                    </h2>
-                    <p class="Work-author">
-                        <a class="Author-link" href="#">Juan</a>
-                    </p>
-                    <p class="Work-date">
-                        18/10/2014
-                    </p>
-                </div>
-            </div>
-        </article>
-        <article class="Work-item">
-            <figure class="Work-image">
-                <a href="#">
-                    <img src="static/img/obra3.jpg" width="300" height="173">
-                </a>
-            </figure>
-            <div class="Work-Data">
-                <figure class="Work-Avatar">
-                    <a href="#"> 
-                        <img src="static/img/avatar3.jpg" width="50" height="50">
-                    </a>
-                </figure>
-                <div class="Work-info">
-                    <h2 class="Work-title"> 
-                        <a class='fotografia-filme-icon' href="#"> Dubai</a>
-                    </h2>
-                    <p class="Work-author">
-                        <a class="Author-link" href="#">Miguel</a>
-                    </p>
-                    <p class="Work-date">
-                        18/10/2014
-                    </p>
-                </div>
-            </div>
-        </article>
-        <article class="Work-item">
-            <figure class="Work-image">
-                <a href="#">
-                    <img src="static/img/obra4.jpg" width="300" height="173">
-                </a>
-            </figure>
-            <div class="Work-Data">
-                <figure class="Work-Avatar">
-                    <a href="#"> 
-                        <img src="static/img/avatar4.jpg" width="50" height="50">
-                    </a>
-                </figure>
-                <div class="Work-info">
-                    <h2 class="Work-title"> 
-                        <a class='fotografia-filme-icon' href="#"> Edificios</a>
-                    </h2>
-                    <p class="Work-author">
-                        <a class="Author-link" href="#">El Mike</a>
-                    </p>
-                    <p class="Work-date">
-                        18/10/2014
-                    </p>
-                </div>
-            </div>
-        </article>
-        <article class="Work-item">
-            <figure class="Work-image">
-                <a href="#">
-                    <img src="static/img/obra5.jpg" width="300" height="173">
-                </a>
-            </figure>
-            <div class="Work-Data">
-                <figure class="Work-Avatar">
-                    <a href="#"> 
-                        <img src="static/img/avatar5.jpg" width="50" height="50">
-                    </a>
-                </figure>
-                <div class="Work-info">
-                    <h2 class="Work-title"> 
-                        <a class='fotografia-filme-icon' href="#"> Arriesgado</a>
-                    </h2>
-                    <p class="Work-author">
-                        <a class="Author-link" href="#">Zartman</a>
-                    </p>
-                    <p class="Work-date">
-                        18/10/2014
-                    </p>
-                </div>
-            </div>
-        </article>
-        <article class="Work-item">
-            <figure class="Work-image">
-                <a href="#">
-                    <img src="static/img/obra6.jpg" width="300" height="173">
-                </a>
-            </figure>
-            <div class="Work-Data">
-                <figure class="Work-Avatar">
-                    <a href="#"> 
-                        <img src="static/img/avatar6.jpg" width="50" height="50">
-                    </a>
-                </figure>
-                <div class="Work-info">
-                    <h2 class="Work-title"> 
-                        <a class='fotografia-filme-icon' href="#" > Paisaje</a>
-                    </h2>
-                    <p class="Work-author">
-                        <a class="Author-link" href="#">Locolml</a>
-                    </p>
-                    <p class="Work-date">
-                        18/10/2014
-                    </p>
-                </div>
-            </div>
-        </article>
-        <article class="Work-item">
-            <figure class="Work-image">
-                <a href="#">
-                    <img src="static/img/obra7.jpg" width="300" height="173">
-                </a>
-            </figure>
-            <div class="Work-Data">
-                <figure class="Work-Avatar">
-                    <a href="#"> 
-                        <img src="static/img/avatar7.jpg" width="50" height="50">
-                    </a>
-                </figure>
-                <div class="Work-info">
-                    <h2 class="Work-title"> 
-                        <a class='fotografia-filme-icon' href="#"> Pinguinos</a>
-                    </h2>
-                    <p class="Work-author">
-                        <a class="Author-link" href="#">Kawaiman</a>
-                    </p>
-                    <p class="Work-date">
-                        18/10/2014
-                    </p>
-                </div>
-            </div>
-        </article>
-        <article class="Work-item">
-            <figure class="Work-image">
-                <a href="#">
-                    <img src="static/img/obra8.jpg" width="300" height="173">
-                </a>
-            </figure>
-            <div class="Work-Data">
-                <figure class="Work-Avatar">
-                    <a href="#"> 
-                        <img src="static/img/avatar8.jpg" width="50" height="50">
-                    </a>
-                </figure>
-                <div class="Work-info">
-                    <h2 class="Work-title"> 
-                        <a class='fotografia-filme-icon' href="#"> Tiburon</a>
-                    </h2>
-                    <p class="Work-author">
-                        <a class="Author-link" href="#">Zulito</a>
-                    </p>
-                    <p class="Work-date">
-                        18/10/2014
-                    </p>
-                </div>
-            </div>
-        </article>
-    </section>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script src="static/js/main.js"></script>
+    <a href="/templates/home.html">Home</a>
+    <a href="/templates/login.html">Login</a>
+    <a href="/templates/register.html">Registro</a>
 </body>
 </html>
