aregladas las urls

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>Diseño Mozart</title>
 </head>
 <body>
-    <a href="/templates/home.html">Home</a>
-    <a href="/templates/login.html">Login</a>
-    <a href="/templates/register.html">Registro</a>
+    <a href="mozart-desing/templates/home.html">Home</a>
+    <a href="mozart-desing/templates/login.html">Login</a>
+    <a href="mozart-desing/templates/register.html">Registro</a>
 </body>
 </html>
