estilos al index

--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Diseño Mozart</title>
+	<meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
+	<title>Login - mozArt</title>
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400' rel='stylesheet' type='text/css'/>
+	<link rel="stylesheet" type="text/css" href="../static/css/main.css"/>
+	<link rel="icon" type="image/png" href="../static/img/favicon.png"/>
 </head>
 <body>
-    <a href="/templates/home.html">Home</a>
-    <a href="/templates/login.html">Login</a>
-    <a href="/templates/register.html">Registro</a>
+	<header class="Header">
+		<figure class="Header-logo">
+    		<img src="../static/img/logo.png" alt="mozArt" height="auto" width="150px"/>
+		</figure>
+	</header>
+    <a class="Index-option"href="templates/home.html">Home</a>
+    <a class="Index-option"href="templates/login.html">Login</a>
+    <a class="Index-option"href="templates/register.html">Registro</a>
 </body>
 </html>
