arreglados estaticos del index

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 	<title>Login - mozArt</title>
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400' rel='stylesheet' type='text/css'/>
 	<link rel="stylesheet" type="text/css" href="../static/css/main.css"/>
-	<link rel="icon" type="image/png" href="../static/img/favicon.png"/>
+	<link rel="icon" type="image/png" href="static/img/favicon.png"/>
 </head>
 <body>
 	<header class="Header">
 		<figure class="Header-logo">
-    		<img src="../static/img/logo.png" alt="mozArt" height="auto" width="150px"/>
+    		<img src="static/img/logo.png" alt="mozArt" height="auto" width="150px"/>
 		</figure>
 	</header>
     <a class="Index-option"href="templates/home.html">Home</a>
