--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
 	<title>Login - mozArt</title>
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400' rel='stylesheet' type='text/css'/>
-	<link rel="stylesheet" type="text/css" href="../static/css/main.css"/>
+	<link rel="stylesheet" type="text/css" href="static/css/main.css"/>
 	<link rel="icon" type="image/png" href="static/img/favicon.png"/>
 </head>
 <body>
