añadida vista mobil del formulario para subir una obra

--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     <a class="Index-option"href="templates/home.html">Home</a>
     <a class="Index-option"href="templates/login.html">Login</a>
     <a class="Index-option"href="templates/register.html">Registro</a>
+    <a class="Index-option"href="templates/subir-obra.html">Subir Obra</a>
 </body>
 </html>
